--- a/src/styles.css
+++ b/src/styles.css
@@ -1,5 +1,38 @@
 /* styles.css */
+* {
+  margin: 0;
+  padding: 0;
+}
+
 body {
-    background-color: rebeccapurple;
+    background-color: black;
   }
   
+.banner {
+  width: 100%;
+  height: 33vh;
+  background-image: url("./images/sopranos_202.png");
+  background-size: cover;
+  background-position: 30% 20%;
+  color: red;
+  display: flex;
+  justify-content: flex-end;
+  align-items: flex-end;
+  font-family: 'Brush Script MT', cursive;
+  font-size: 100px;
+  text-shadow: 2px 2px 2px #000000;  
+}
+
+nav {
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
+}
+
+/* "#content div" selects all divs in content */
+#content div{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  color: white;
+}
