--- a/src/styles.css
+++ b/src/styles.css
@@ -4,13 +4,20 @@
   padding: 0;
 }
 
-body {
+body, html {
     background-color: black;
-  }
+    height: 100%;
+    width: 100%;
+    box-sizing: border-box;
+}
+
+body {
+  display: grid;
+  grid-template-rows: 33vh 10vh;
+}
   
 .banner {
   width: 100%;
-  height: 33vh;
   background-image: url("./images/sopranos_202.png");
   background-size: cover;
   background-position: 30% 20%;
@@ -34,5 +41,45 @@ nav {
   display: flex;
   flex-direction: column;
   align-items: center;
+  color: black;
+}
+
+#content {
+  width: 66vw;
+  height: 100%;
+  /* this isnt being centered bc of vw, it cant center bc it doesnt have a container */
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  background-image: url("./images/white-parchment-paper_53876-92954.png");
+  background-size: cover;
+  border-radius: 25px;
+  padding: 10px;
+}
+
+.menuItem {
+  margin: 10px;
+}
+
+.menuItemName {
+  font-family: 'Brush Script MT', cursive;
+  font-size: 20px;
+  color: red;
+}
+
+nav {
+  background-color: red;
+  height: 40px;
+}
+
+button { 
+  border: none;
   color: white;
+  background-color: red;
+  font-family: 'Brush Script MT', cursive;
+  font-size: 1em;
+}
+
+button:hover {
+  color: tan
 }
