More CSS updates.

--- a/src/styles.css
+++ b/src/styles.css
@@ -13,7 +13,10 @@ body, html {
 
 body {
   display: grid;
-  grid-template-rows: 33vh 7vh;
+  grid-template-rows: 25vh 5vh;
+  background-image: url("./images/vesuvio.png");
+  background-size: cover;
+  backdrop-filter: blur(10px);
 }
   
 .banner {
@@ -27,7 +30,7 @@ body {
   align-items: flex-end;
   font-family: 'Brush Script MT', cursive;
   font-size: 100px;
-  text-shadow: 2px 2px 2px #000000;  
+  text-shadow: 2px 2px 2px #000000;
 }
 
 nav {
@@ -52,7 +55,7 @@ nav button:hover {
 }
 
 #content {
-  width: 66vw;
+  width: 50vw;
   /* why did margin 0 auto work but now flex centering? */
   margin: 0 auto;
   display: flex;
@@ -62,7 +65,8 @@ nav button:hover {
   background-image: url("./images/white-parchment-paper_53876-92954.png");
   background-size: cover;
   border-radius: 25px;
-  padding: 10px;
+  padding: 20px;
+  font-size: 20px;
 }
 
 .menuItemContainer {
@@ -75,8 +79,9 @@ nav button:hover {
 
 .menuItemName {
   font-family: 'Brush Script MT', cursive;
-  font-size: 20px;
+  font-size: 30px;
   color: red;
 }
+
 
 
